[tool.poetry]
name = "cat pyproject-toml"
version = "0.1.0"
description = ""
authors = ["FanHaoZeng <95731247+FanHaoZeng@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "cat pyproject"}]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^3.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
