[tool.poetry]
name = "practical01"
version = "0.1.0"
description = ""
authors = ["FanHaoZeng <1992344969@qq.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^3.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
